--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,7 +1,7 @@
 mixin video(video)
     a(href=`/videos/${video.id}`).video-mixin
         div.video-mixin__thumb
-            video(src="/" + video.fileUrl)
+            video(src=video.fileUrl)
         //- div.video-mixin__thumb(style=`background-image:url(${video.thumbUrl});background-size:cover;background-position:center`)
         div.video-mixin__data
             div.video-mixin__avatar.avatar
