--- a/src/views/users/login.pug
+++ b/src/views/users/login.pug
@@ -1,7 +1,7 @@
 extends ../base
 
 block content 
-    div.form__wrapper
+    div.main__wrapper
         form(method="POST")
             input(placeholder="Username", name="username", type="text", required)
             input(placeholder="Password", name="password", type="password", required)
