--- a/src/client/scss/components/shared.scss
+++ b/src/client/scss/components/shared.scss
@@ -33,80 +33,30 @@
   }
 }
 
-.form__wrapper {
-  max-width: 700px;
-  margin: 0 auto;
-  form {
-    display: flex;
-    flex-direction: column;
-    input,
-    label,
-    textarea,
-    button {
-      display: block;
-      font-size: 18px;
-      padding: 10px;
-
-      border: 1px solid $border;
-      margin-bottom: 10px;
-      border-radius: 15px;
-    }
-    label {
-      background: #999;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    input[type="file"] {
-      display: none;
-    }
+@keyframes goAway {
+  from {
+    transform: none;
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-50px);
+    opacity: 0;
   }
 }
 
-.normalBtn {
-  display: flex;
-  align-items: center;
-  background: $back;
-  padding: 5px 13px 5px 10px;
-  font-size: 14px;
-  border-radius: 10px;
-  border: 1px solid #ddd;
-  .material-icons {
-    margin-right: 5px;
-  }
-}
-
-.submitBtn {
-  background-color: #999 !important;
-  color: #fff;
-}
-
-.errorBox__wrapper {
+.message {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(255, 255, 255, 0.5);
-}
-
-.errorBox {
-  width: 600px;
-  height: 400px;
-  border: 1px solid $border;
-  border-radius: 35px;
-  background: #fff;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  .closeBtn {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-  }
+  right: 0;
+  margin: 0 auto;
+  max-width: 200px;
+  padding: 10px 20px 18px;
+  border-radius: 0 0 25px 25px;
+  text-align: center;
+  animation: goAway 0.5s ease-in-out forwards;
+  animation-delay: 5s;
+  background-color: tomato;
+  color: white;
+  z-index: 9999;
 }
