--- a/src/client/scss/components/video-player.scss
+++ b/src/client/scss/components/video-player.scss
@@ -14,6 +14,15 @@
   #videoControls {
     opacity: 0;
     transition: 0.3s all ease-out;
+    color: #fff;
+    span,
+    .material-icons {
+      margin-left: 5px;
+      transition: 0.2s all ease-in-out;
+      &:hover {
+        color: #999;
+      }
+    }
     &.showing {
       opacity: 1;
     }
@@ -85,15 +94,117 @@
 
 .video__data {
   margin-top: 25px;
-  margin-bottom: 25px;
-  .video__title {
-    font-size: 28px;
+  .video__info {
+    .video__title {
+      font-size: 28px;
+    }
+    .video__spec {
+      display: flex;
+      flex-direction: row;
+      padding-top: 10px;
+      align-items: center;
+      .video__description {
+        &::after {
+          content: "∙";
+        }
+      }
+    }
+  }
+  .owner__info {
+    border-top: 1px solid $border;
+    margin-top: 10px;
+    padding-top: 15px;
+    // border-bottom: 1px solid $border;
+    display: flex;
+    align-items: center;
+    a {
+      display: flex;
+      align-items: center;
+      .avatar {
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+      }
+    }
   }
 }
 
+.video__add-comments {
+  margin-top: 25px;
+  .textbox__comment-form {
+    display: flex;
+    flex-direction: row;
+    textarea {
+      width: 100%;
+      border: 0;
+      border-radius: 0;
+      resize: none;
+      &:focus {
+        border-bottom: 1px solid $border;
+        outline: 0;
+      }
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    .avatar {
+      width: 40px;
+      height: 40px;
+      margin-right: 10px;
+    }
+    .username {
+      display: none;
+    }
+  }
+}
 .video__comments {
-  .avatar {
-    width: 20px;
-    height: 20px;
+  display: flex;
+  width: 100%;
+  margin-top: 25px;
+  ul {
+    width: 100%;
+    li {
+      margin-bottom: 20px;
+    }
+    a {
+      margin-right: 10px;
+    }
+    .video__comment {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      position: relative;
+      transition: 0.2s all ease-in-out;
+      .comment__username {
+        margin-bottom: 5px;
+        font-weight: bold;
+      }
+      .avatar {
+        width: 40px;
+        height: 40px;
+      }
+      .delete__comment {
+        position: absolute;
+        right: 0;
+        opacity: 0;
+        visibility: hidden;
+
+        transition: 0.2s all ease-in-out;
+      }
+      &:hover {
+        .delete__comment {
+          visibility: visible;
+          opacity: 1;
+        }
+        background: linear-gradient(
+          90deg,
+          #fff 0%,
+          $back 35%,
+          $back 65%,
+          #fff 100%
+        );
+      }
+    }
   }
 }
