--- a/src/views/mixins/video.pug
+++ b/src/views/mixins/video.pug
@@ -1,11 +1,17 @@
 mixin video(video)
     a(href=`/videos/${video.id}`).video-mixin
         div.video-mixin__thumb
-            video(src=video.fileUrl)
+            if video.fileUrl.startsWith("http")
+                video(src=video.fileUrl)
+            else 
+                video(src="/"+video.fileUrl)
         //- div.video-mixin__thumb(style=`background-image:url(${video.thumbUrl});background-size:cover;background-position:center`)
         div.video-mixin__data
             div.video-mixin__avatar.avatar
-                img(src=video.owner.avatarUrl)
+                if video.owner.avatarUrl.startsWith("http")
+                    img(src=video.owner.avatarUrl)
+                else 
+                    img(src="/"+video.owner.avatarUrl)
             div.video-mixin__info
                 div.video-mixin__title=video.title
                 div.video-mixin__meta
