--- a/src/views/users/change-password.pug
+++ b/src/views/users/change-password.pug
@@ -3,8 +3,10 @@ extends ../base
 block content
     if errorMessage
         span=errorMessage
-    form(method="post")
-        input(placeholder="Old Password",type="password", name="oldPassword")
-        input(placeholder="New Password",type="password", name="newPassword")
-        input(placeholder="New Password Confirmation",type="password", name="newPasswordConfirm")
-        input(value="Change Password", type="submit")
+    div.main__wrapper
+        h2.title 비밀번호 변경
+        form(method="post")
+            input(placeholder="현재 비밀번호",type="password", name="oldPassword")
+            input(placeholder="새 비밀번호",type="password", name="newPassword")
+            input(placeholder="비밀번호 확인",type="password", name="newPasswordConfirm")
+            input(value="비밀번호 변경", type="submit")
