--- a/src/views/users/join.pug
+++ b/src/views/users/join.pug
@@ -2,7 +2,7 @@ extends ../base
 
 
 block content
-    div.form__wrapper
+    div.main__wrapper
         form(method="POST")
             input(placeholder="Email", name="email", type="email", required)
             input(placeholder="Username", name="username", type="text", required)
