--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -3,15 +3,21 @@ include ../mixins/video
 
 
 block content
-    div.profile__data
-        if user.avatarUrl.startsWith("http")
-            img(src=user.avatarUrl).avatar
-        else 
-            img(src="/" + user.avatarUrl).avatar
-        h3=user.username
-    div.video-grid
-        each video in user.videos
-            +video(video)
-        else
-            span.empty__message No videos found
-    a(href="/users/edit-profile") Edit Profile
+        div.main__wrapper
+            div.profile__data
+                h2.title=user.username
+                if user.avatarUrl.startsWith("http")
+                    img(src=user.avatarUrl).avatar
+                else 
+                    img(src="/" + user.avatarUrl).avatar
+                div.profile__btns
+                    a(href="/users/edit-profile").normalBtn
+                        span 정보 수정
+                    a(href="/users/change-password").normalBtn
+                        span 비밀번호 변경
+        h3.profile-devider 내 비디오
+        div.video-grid.profile-video
+            each video in user.videos
+                +video(video)
+            else
+                span.empty__message No videos found
