--- a/src/views/videos/comment.pug
+++ b/src/views/videos/comment.pug
@@ -1,16 +1,26 @@
 if loggedIn
         div.video__add-comments
             form.video__comment-form#commentForm
-                textarea(cols="30",rows="1", maxlength="50", placeholder="Write comment")
+                div.textbox__comment-form
+                    if loggedInUser.avatarUrl.startsWith("http")
+                        img(src=loggedInUser.avatarUrl).avatar
+                    else
+                        img(src="/"+loggedInUser.avatarUrl).avatar
+                    span.username=loggedInUser.username
+                    textarea(cols="50",rows="1", maxlength="50", placeholder="댓글을 입력해주세요.")
                 button.submitBtn Add Comment
                     
 div.video__comments
     ul 
         each comment in video.comments.reverse()
             li.video__comment(data-id=comment.id)
-                div.avatar
-                    a(href=`/users/${comment.owner._id}`)
+                a(href=`/users/${comment.owner._id}`).avatar
+                    if comment.owner.avatarUrl.startsWith("http")
                         img(src=comment.owner.avatarUrl)
-                span #{comment.text}
-                if String(comment.owner) === String(loggedInUser._id)
+                    else 
+                        img(src="/"+comment.owner.avatarUrl)
+                div
+                    div.comment__username=comment.owner.username
+                    div.comment__text=comment.text
+                if String(comment.owner.id) === String(loggedInUser._id)
                     span.delete__comment ❌
