--- a/src/views/videos/edit.pug
+++ b/src/views/videos/edit.pug
@@ -1,9 +1,16 @@
 extends ../base.pug
 
 block content
-    h4 Edit Video
-    form(method="POST")
-        input(name="title", placeholder="Video Title", value=video.title, required)
-        input(placeholder="Description", required, type="text", name="description", minlength=1, value=video.description)
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join())
-        input(value="Save",type="submit")
+    div.main__wrapper
+        h2.title 게시물 수정
+        form(method="POST")
+            div.input__wrapper
+                p 제 목
+                input(name="title", placeholder="제목", value=video.title, required)
+            div.input__wrapper
+                p 내 용
+                input(placeholder="내용", required, type="text", name="description", minlength=1, value=video.description)
+            div.input__wrapper
+                p 해시 태그
+                input(placeholder="해시태그(,로 구분)", required, type="text", name="hashtags", value=video.hashtags.join())
+            input(value="수정",type="submit")
